--- a/deb/openmediavault/usr/share/openmediavault/locale/nl_NL/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/nl_NL/openmediavault.po
@@ -11,8 +11,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2017-11-18 11:05+0100\n"
-"PO-Revision-Date: 2017-11-18 10:08+0000\n"
+"POT-Creation-Date: 2018-01-21 11:50+0100\n"
+"PO-Revision-Date: 2018-01-21 10:50+0000\n"
 "Last-Translator: Volker <votdev@gmx.de>\n"
 "Language-Team: Dutch (Netherlands) (http://www.transifex.com/votdev/openmediavault/language/nl_NL/)\n"
 "MIME-Version: 1.0\n"
@@ -311,9 +311,6 @@ msgstr "Algerije"
 
 msgid "All"
 msgstr "Iedereen"
-
-msgid "Allow client access to accounts that have null passwords"
-msgstr "Cliënten toegang tot accounts met \"null\" (blanco) wachtwoord toestaan"
 
 msgid ""
 "Allow clients to attempt to store OS/2 style extended attributes on a share."
@@ -2202,9 +2199,6 @@ msgstr "Meldingen"
 msgid "November"
 msgstr "November"
 
-msgid "Null passwords"
-msgstr "Blanco wachtwoorden"
-
 msgid "Num"
 msgstr "Num"
 
@@ -2370,12 +2364,6 @@ msgid ""
 msgstr "Raadpleeg de <a href='http://linux.die.net/man/5/exports' target='_blank'>handleiding</a> voor meer details."
 
 msgid ""
-"Please check the <a href='http://www.openbsd.org/cgi-"
-"bin/man.cgi?query=sshd_config&sektion=5' target='_blank'>manual page</a> for"
-" more details."
-msgstr "Raadpleeg de <a href='http://www.openbsd.org/cgi-bin/man.cgi?query=sshd_config&sektion=5' target='_blank'>handleidingspagina</a> voor meer details."
-
-msgid ""
 "Please check the <a href='http://www.proftpd.org/docs/contrib/mod_tls.html' "
 "target='_blank'>manual page</a> for more details."
 msgstr "Raadpleeg de <a href='http://www.proftpd.org/docs/contrib/mod_tls.html' target='_blank'>handleidingspagina</a> voor meer details."
@@ -2406,6 +2394,11 @@ msgid ""
 "href='http://www.samba.org/samba/docs/man/manpages-3/smb.conf.5.html' "
 "target='_blank'>manual page</a> for more details."
 msgstr "Raadpleeg de <a href='http://www.samba.org/samba/docs/man/manpages-3/smb.conf.5.html' target='_blank'>handleidingspagina</a> voor meer details."
+
+msgid ""
+"Please check the <a href='https://man.openbsd.org/sshd_config.5' "
+"target='_blank'>manual page</a> for more details."
+msgstr ""
 
 msgid "Please choose the method to wipe the device or 'Cancel' to abort."
 msgstr "Kies een methode om het apparaat te wissen of 'Annuleren' om af te breken"
@@ -3506,9 +3499,15 @@ msgstr "Dit veld mag alleen getallen bevatten"
 msgid "This field should only contain numbers separated by <,> or <;>"
 msgstr "Dit veld dient alleen nummers te bevatten die gescheiden worden door een <,> of een <;>"
 
+msgid "This field should only contain options separated by <,>"
+msgstr ""
+
 msgid ""
 "This field should only contain ports (0 - 65535) separated by <,> or <;>"
 msgstr "Dit veld dient alleen poortnummers (0-65535) te bevatten, gescheiden door een <,> of een <;>"
+
+msgid "This field should only contain strings separated by <,>"
+msgstr ""
 
 msgid "This field should only contain strings separated by <,> or <;>"
 msgstr "Dit veld dient alleen tekenreeksen te bevatten, gescheiden door <,> of een <;>"
