--- a/deb/openmediavault/usr/share/openmediavault/locale/cs_CZ/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/cs_CZ/openmediavault.po
@@ -9,9 +9,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2017-11-18 11:05+0100\n"
-"PO-Revision-Date: 2017-11-18 19:08+0000\n"
-"Last-Translator: Pavel Borecki <pavel.borecki@gmail.com>\n"
+"POT-Creation-Date: 2018-01-21 11:50+0100\n"
+"PO-Revision-Date: 2018-01-21 10:50+0000\n"
+"Last-Translator: Volker <votdev@gmx.de>\n"
 "Language-Team: Czech (Czech Republic) (http://www.transifex.com/votdev/openmediavault/language/cs_CZ/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -309,9 +309,6 @@ msgstr "Alžírsko"
 
 msgid "All"
 msgstr "Vše"
-
-msgid "Allow client access to accounts that have null passwords"
-msgstr "Umožnit přístup k účtům nechráněným heslem"
 
 msgid ""
 "Allow clients to attempt to store OS/2 style extended attributes on a share."
@@ -2200,9 +2197,6 @@ msgstr "Upozorňování"
 msgid "November"
 msgstr "Listopad"
 
-msgid "Null passwords"
-msgstr "Prázdná (žádná) hesla"
-
 msgid "Num"
 msgstr "Číslo"
 
@@ -2368,12 +2362,6 @@ msgid ""
 msgstr "Podrobnosti naleznete v <a href='http://linux.die.net/man/5/exports' target='_blank'>manuálové stránce</a> (v angličtině)."
 
 msgid ""
-"Please check the <a href='http://www.openbsd.org/cgi-"
-"bin/man.cgi?query=sshd_config&sektion=5' target='_blank'>manual page</a> for"
-" more details."
-msgstr "Podrobnosti naleznete v <a href='http://www.openbsd.org/cgi-bin/man.cgi?query=sshd_config&sektion=5' target='_blank'>manuálové stránce</a> (v angličtině)."
-
-msgid ""
 "Please check the <a href='http://www.proftpd.org/docs/contrib/mod_tls.html' "
 "target='_blank'>manual page</a> for more details."
 msgstr "Podrobnosti naleznete v <a href='http://www.proftpd.org/docs/contrib/mod_tls.html' target='_blank'>manuálové stránce</a> (v angličtině)."
@@ -2404,6 +2392,11 @@ msgid ""
 "href='http://www.samba.org/samba/docs/man/manpages-3/smb.conf.5.html' "
 "target='_blank'>manual page</a> for more details."
 msgstr "Podrobnosti naleznete v <a href='http://www.samba.org/samba/docs/man/manpages-3/smb.conf.5.html' target='_blank'>manuálové stránce</a> (v angličtině)."
+
+msgid ""
+"Please check the <a href='https://man.openbsd.org/sshd_config.5' "
+"target='_blank'>manual page</a> for more details."
+msgstr ""
 
 msgid "Please choose the method to wipe the device or 'Cancel' to abort."
 msgstr "Zvolte způsob kompletního smazání zařízení nebo celou akci zrušte kliknutím na „Zrušit“."
@@ -3504,9 +3497,15 @@ msgstr "Tato kolonka by měla obsahovat pouze čísla"
 msgid "This field should only contain numbers separated by <,> or <;>"
 msgstr "Tato kolonka by měla obsahovat číslice, oddělené znaky <,> (čárka) nebo <;> (středník)"
 
+msgid "This field should only contain options separated by <,>"
+msgstr ""
+
 msgid ""
 "This field should only contain ports (0 - 65535) separated by <,> or <;>"
 msgstr "Tato kolonka by měla obsahovat pouze čísla portů (0 - 65535), oddělená znaky <,> (čárka) nebo <;> (středník)"
+
+msgid "This field should only contain strings separated by <,>"
+msgstr ""
 
 msgid "This field should only contain strings separated by <,> or <;>"
 msgstr "Tato kolonka by měla obsahovat pouze řetězce znaků, oddělených znaky <,> (čárka) nebo <;> (středník)"
