--- a/deb/openmediavault/usr/share/openmediavault/locale/it_IT/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/it_IT/openmediavault.po
@@ -13,9 +13,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2017-11-18 11:05+0100\n"
-"PO-Revision-Date: 2017-11-20 22:17+0000\n"
-"Last-Translator: Paolo Velati <paolo.velati@gmail.com>\n"
+"POT-Creation-Date: 2018-01-21 11:50+0100\n"
+"PO-Revision-Date: 2018-01-21 10:50+0000\n"
+"Last-Translator: Volker <votdev@gmx.de>\n"
 "Language-Team: Italian (http://www.transifex.com/votdev/openmediavault/language/it/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -313,9 +313,6 @@ msgstr "Algeria"
 
 msgid "All"
 msgstr "Tutti"
-
-msgid "Allow client access to accounts that have null passwords"
-msgstr "Consenti l'accesso da client con account privi di password"
 
 msgid ""
 "Allow clients to attempt to store OS/2 style extended attributes on a share."
@@ -2204,9 +2201,6 @@ msgstr "Notifiche"
 msgid "November"
 msgstr "Novembre"
 
-msgid "Null passwords"
-msgstr "Password vuota"
-
 msgid "Num"
 msgstr "Num"
 
@@ -2372,12 +2366,6 @@ msgid ""
 msgstr "Si prega di verificare la <a href='http://linux.die.net/man/5/exports' target='_blank'>pagina del manuale</a> per maggiori dettagli."
 
 msgid ""
-"Please check the <a href='http://www.openbsd.org/cgi-"
-"bin/man.cgi?query=sshd_config&sektion=5' target='_blank'>manual page</a> for"
-" more details."
-msgstr "Si prega di verificare la <a href='http://www.openbsd.org/cgi-bin/man.cgi?query=sshd_config&sektion=5' target='_blank'>pagina del manuale</a> per maggiori dettagli."
-
-msgid ""
 "Please check the <a href='http://www.proftpd.org/docs/contrib/mod_tls.html' "
 "target='_blank'>manual page</a> for more details."
 msgstr "Si prega di verificare la <a href='http://www.proftpd.org/docs/contrib/mod_tls.html' target='_blank'>pagina del manuale</a>per maggiori dettagli.."
@@ -2408,6 +2396,11 @@ msgid ""
 "href='http://www.samba.org/samba/docs/man/manpages-3/smb.conf.5.html' "
 "target='_blank'>manual page</a> for more details."
 msgstr "Si prega di verificare la <a href='http://www.samba.org/samba/docs/man/manpages-3/smb.conf.5.html' target='_blank'>pagina del manuale</a> per maggiori dettagli."
+
+msgid ""
+"Please check the <a href='https://man.openbsd.org/sshd_config.5' "
+"target='_blank'>manual page</a> for more details."
+msgstr ""
 
 msgid "Please choose the method to wipe the device or 'Cancel' to abort."
 msgstr "Per favore scegli il metodo per il ripristino del dispositivo o 'Annulla' per annullare."
@@ -3508,9 +3501,15 @@ msgstr "Questo campo dovrebbe solo contenere numeri"
 msgid "This field should only contain numbers separated by <,> or <;>"
 msgstr "Questo campo dovrebbe contenere solamente numeri separati da <,> o <;>"
 
+msgid "This field should only contain options separated by <,>"
+msgstr ""
+
 msgid ""
 "This field should only contain ports (0 - 65535) separated by <,> or <;>"
 msgstr "Questo campo dovrebbe contenere solamente porte (0 - 65535) separate da <,> o <;>"
+
+msgid "This field should only contain strings separated by <,>"
+msgstr ""
 
 msgid "This field should only contain strings separated by <,> or <;>"
 msgstr "Questo campo dovrebbe contenere solamente stringhe separate da <,> o <;>"
