--- a/deb/openmediavault/usr/share/openmediavault/locale/ja_JP/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/ja_JP/openmediavault.po
@@ -8,9 +8,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2017-11-18 11:05+0100\n"
-"PO-Revision-Date: 2017-11-20 04:19+0000\n"
-"Last-Translator: Toshihiro Kan <kansuke4649@gmail.com>\n"
+"POT-Creation-Date: 2018-01-21 11:50+0100\n"
+"PO-Revision-Date: 2018-01-21 10:50+0000\n"
+"Last-Translator: Volker <votdev@gmx.de>\n"
 "Language-Team: Japanese (Japan) (http://www.transifex.com/votdev/openmediavault/language/ja_JP/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -308,9 +308,6 @@ msgstr "アルジェリア"
 
 msgid "All"
 msgstr "すべて"
-
-msgid "Allow client access to accounts that have null passwords"
-msgstr "ヌルパスワードを持つアカウントへのクライアントアクセスを許可"
 
 msgid ""
 "Allow clients to attempt to store OS/2 style extended attributes on a share."
@@ -2199,9 +2196,6 @@ msgstr "通知"
 msgid "November"
 msgstr "11月"
 
-msgid "Null passwords"
-msgstr "ヌルパスワード"
-
 msgid "Num"
 msgstr "番号"
 
@@ -2367,12 +2361,6 @@ msgid ""
 msgstr "詳細については <a href='http://linux.die.net/man/5/exports' target='_blank'>マニュアルページ</a> を確認してください。"
 
 msgid ""
-"Please check the <a href='http://www.openbsd.org/cgi-"
-"bin/man.cgi?query=sshd_config&sektion=5' target='_blank'>manual page</a> for"
-" more details."
-msgstr "詳細については <a href='http://www.openbsd.org/cgi-bin/man.cgi?query=sshd_config&sektion=5' target='_blank'>マニュアルページ</a> を確認してください。"
-
-msgid ""
 "Please check the <a href='http://www.proftpd.org/docs/contrib/mod_tls.html' "
 "target='_blank'>manual page</a> for more details."
 msgstr "詳細については <a href='http://www.proftpd.org/docs/contrib/mod_tls.html' target='_blank'>マニュアルページ</a> を確認してください。"
@@ -2403,6 +2391,11 @@ msgid ""
 "href='http://www.samba.org/samba/docs/man/manpages-3/smb.conf.5.html' "
 "target='_blank'>manual page</a> for more details."
 msgstr "詳細については <a href='http://www.samba.org/samba/docs/man/manpages-3/smb.conf.5.html' target='_blank'>マニュアルページ</a> を確認してください。"
+
+msgid ""
+"Please check the <a href='https://man.openbsd.org/sshd_config.5' "
+"target='_blank'>manual page</a> for more details."
+msgstr ""
 
 msgid "Please choose the method to wipe the device or 'Cancel' to abort."
 msgstr "デバイスをワイプする方法を選択してください。中止する場合は'キャンセル'を選択してください。"
@@ -3503,9 +3496,15 @@ msgstr "このフィールドは数字のみである必要があります"
 msgid "This field should only contain numbers separated by <,> or <;>"
 msgstr "このフィールドは、<,>または<;>で区切られた数字である必要があります"
 
+msgid "This field should only contain options separated by <,>"
+msgstr ""
+
 msgid ""
 "This field should only contain ports (0 - 65535) separated by <,> or <;>"
 msgstr "このフィールドは、<,>または<;>で区切られたポート(0 - 65535)である必要があります"
+
+msgid "This field should only contain strings separated by <,>"
+msgstr ""
 
 msgid "This field should only contain strings separated by <,> or <;>"
 msgstr "このフィールドは、<,>または<;>で区切られた文字列である必要があります"
