--- a/deb/openmediavault/usr/share/openmediavault/locale/ru_RU/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/ru_RU/openmediavault.po
@@ -16,9 +16,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2017-11-18 11:05+0100\n"
-"PO-Revision-Date: 2017-11-27 06:24+0000\n"
-"Last-Translator: Артур Мудрых <arturmon82@gmail.com>\n"
+"POT-Creation-Date: 2018-01-21 11:50+0100\n"
+"PO-Revision-Date: 2018-01-21 10:50+0000\n"
+"Last-Translator: Volker <votdev@gmx.de>\n"
 "Language-Team: Russian (Russia) (http://www.transifex.com/votdev/openmediavault/language/ru_RU/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -316,9 +316,6 @@ msgstr "Алжир"
 
 msgid "All"
 msgstr "Все"
-
-msgid "Allow client access to accounts that have null passwords"
-msgstr "Разрешить клиенту доступ к аккаунтам, которые имеют нулевой пароль"
 
 msgid ""
 "Allow clients to attempt to store OS/2 style extended attributes on a share."
@@ -2207,9 +2204,6 @@ msgstr "Уведомления"
 msgid "November"
 msgstr "Ноябрь"
 
-msgid "Null passwords"
-msgstr "Нулевые пароли"
-
 msgid "Num"
 msgstr "Номер"
 
@@ -2375,12 +2369,6 @@ msgid ""
 msgstr "Ознакомьтесь со <a href='http://linux.die.net/man/5/exports' target='_blank'>страницей описания</ A> для более подробной информации."
 
 msgid ""
-"Please check the <a href='http://www.openbsd.org/cgi-"
-"bin/man.cgi?query=sshd_config&sektion=5' target='_blank'>manual page</a> for"
-" more details."
-msgstr "Ознакомьтесь со <a href='http://www.openbsd.org/cgi-bin/man.cgi?query=sshd_config&sektion=5' target='_blank'>страницей описания</a> для более подробной информации."
-
-msgid ""
 "Please check the <a href='http://www.proftpd.org/docs/contrib/mod_tls.html' "
 "target='_blank'>manual page</a> for more details."
 msgstr "Ознакомьтесь со <a href='http://www.proftpd.org/docs/contrib/mod_tls.html' target='_blank'>страницей описания</a> для более подробной информации."
@@ -2411,6 +2399,11 @@ msgid ""
 "href='http://www.samba.org/samba/docs/man/manpages-3/smb.conf.5.html' "
 "target='_blank'>manual page</a> for more details."
 msgstr "Ознакомьтесь со <a href='http://www.samba.org/samba/docs/man/manpages-3/smb.conf.5.html' target='_blank'>страницей описания</a> для более подробной информации."
+
+msgid ""
+"Please check the <a href='https://man.openbsd.org/sshd_config.5' "
+"target='_blank'>manual page</a> for more details."
+msgstr ""
 
 msgid "Please choose the method to wipe the device or 'Cancel' to abort."
 msgstr "Пожалуйста, выберите стереть устройство или \"Отмена\" для отмены."
@@ -3511,9 +3504,15 @@ msgstr "Это поле должно содержать только цифры"
 msgid "This field should only contain numbers separated by <,> or <;>"
 msgstr "Это поле должно содержать только цифры, разделенные <,> или <;>"
 
+msgid "This field should only contain options separated by <,>"
+msgstr ""
+
 msgid ""
 "This field should only contain ports (0 - 65535) separated by <,> or <;>"
 msgstr "Это поле должно содержать только порты (0 - 65535), разделенные <,> или <;>"
+
+msgid "This field should only contain strings separated by <,>"
+msgstr ""
 
 msgid "This field should only contain strings separated by <,> or <;>"
 msgstr "Это поле должно только содержать строки, разделенные <,> или <;>"
