--- a/deb/openmediavault/usr/share/openmediavault/locale/uk_UK/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/uk_UK/openmediavault.po
@@ -10,9 +10,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2017-11-18 11:05+0100\n"
-"PO-Revision-Date: 2017-12-23 19:45+0000\n"
-"Last-Translator: zubr139\n"
+"POT-Creation-Date: 2018-01-21 11:50+0100\n"
+"PO-Revision-Date: 2018-01-21 10:50+0000\n"
+"Last-Translator: Volker <votdev@gmx.de>\n"
 "Language-Team: Ukrainian (http://www.transifex.com/votdev/openmediavault/language/uk/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -310,9 +310,6 @@ msgstr "Алжир"
 
 msgid "All"
 msgstr "Всі"
-
-msgid "Allow client access to accounts that have null passwords"
-msgstr "Дозволити клієнтам доступ до аккаунта з нульовим паролем"
 
 msgid ""
 "Allow clients to attempt to store OS/2 style extended attributes on a share."
@@ -2201,9 +2198,6 @@ msgstr "Сповіщення"
 msgid "November"
 msgstr "Листопад"
 
-msgid "Null passwords"
-msgstr "Порожні паролі"
-
 msgid "Num"
 msgstr "Номер"
 
@@ -2369,12 +2363,6 @@ msgid ""
 msgstr "Відвідайте <a href='http://linux.die.net/man/5/exports' target='_blank'>сторінку керівництва</a> для більш докладної інформації."
 
 msgid ""
-"Please check the <a href='http://www.openbsd.org/cgi-"
-"bin/man.cgi?query=sshd_config&sektion=5' target='_blank'>manual page</a> for"
-" more details."
-msgstr "Відвідайте <a href='http://www.openbsd.org/cgi-bin/man.cgi?query=sshd_config&sektion=5' target='_blank'>сторінку керівництва</a> для більш докладної інформації."
-
-msgid ""
 "Please check the <a href='http://www.proftpd.org/docs/contrib/mod_tls.html' "
 "target='_blank'>manual page</a> for more details."
 msgstr "Відвідайте <a href='http://www.proftpd.org/docs/contrib/mod_tls.html' target='_blank'>сторінку керівництва</a> для більш докладної інформації."
@@ -2405,6 +2393,11 @@ msgid ""
 "href='http://www.samba.org/samba/docs/man/manpages-3/smb.conf.5.html' "
 "target='_blank'>manual page</a> for more details."
 msgstr "Відвідайте <a href='http://www.samba.org/samba/docs/man/manpages-3/smb.conf.5.html' target='_blank'>сторінку керівництва</a> для більш докладної інформації."
+
+msgid ""
+"Please check the <a href='https://man.openbsd.org/sshd_config.5' "
+"target='_blank'>manual page</a> for more details."
+msgstr ""
 
 msgid "Please choose the method to wipe the device or 'Cancel' to abort."
 msgstr "Будь ласка, оберіть стерити пристрій, або \"Скасувати\", щоб перервати операцію."
@@ -3505,9 +3498,15 @@ msgstr "Це поле повинно містити тільки числа"
 msgid "This field should only contain numbers separated by <,> or <;>"
 msgstr "Це поле повинно містити тільки числа, розділені <,> або <;>"
 
+msgid "This field should only contain options separated by <,>"
+msgstr ""
+
 msgid ""
 "This field should only contain ports (0 - 65535) separated by <,> or <;>"
 msgstr "Це поле повинно містити тільки порти (0 - 65535), відокремлені <,> або <;>"
+
+msgid "This field should only contain strings separated by <,>"
+msgstr ""
 
 msgid "This field should only contain strings separated by <,> or <;>"
 msgstr "Це поле повинно містити тільки рядки, розділені <,> або <;>"
