--- a/deb/openmediavault/usr/share/openmediavault/locale/zh_TW/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/zh_TW/openmediavault.po
@@ -9,9 +9,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2017-11-18 11:05+0100\n"
-"PO-Revision-Date: 2017-11-18 12:44+0000\n"
-"Last-Translator: kochin <kochinc@outlook.com>\n"
+"POT-Creation-Date: 2018-01-21 11:50+0100\n"
+"PO-Revision-Date: 2018-01-21 10:50+0000\n"
+"Last-Translator: Volker <votdev@gmx.de>\n"
 "Language-Team: Chinese (Taiwan) (http://www.transifex.com/votdev/openmediavault/language/zh_TW/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -309,9 +309,6 @@ msgstr "阿爾及利亞"
 
 msgid "All"
 msgstr "全部"
-
-msgid "Allow client access to accounts that have null passwords"
-msgstr "允許客戶取用擁有空密碼的帳戶"
 
 msgid ""
 "Allow clients to attempt to store OS/2 style extended attributes on a share."
@@ -2200,9 +2197,6 @@ msgstr "通知"
 msgid "November"
 msgstr "十一月"
 
-msgid "Null passwords"
-msgstr "空密碼"
-
 msgid "Num"
 msgstr "號碼"
 
@@ -2368,12 +2362,6 @@ msgid ""
 msgstr "詳情請查看<a href='http://linux.die.net/man/5/exports' target='_blank'>手冊頁</a>。"
 
 msgid ""
-"Please check the <a href='http://www.openbsd.org/cgi-"
-"bin/man.cgi?query=sshd_config&sektion=5' target='_blank'>manual page</a> for"
-" more details."
-msgstr "詳情請查看<a href='http://www.openbsd.org/cgi-bin/man.cgi?query=sshd_config&sektion=5' target='_blank'>手冊頁</a>。"
-
-msgid ""
 "Please check the <a href='http://www.proftpd.org/docs/contrib/mod_tls.html' "
 "target='_blank'>manual page</a> for more details."
 msgstr "詳情請查看<a href='http://www.proftpd.org/docs/contrib/mod_tls.html' target='_blank'>手冊頁</a>。"
@@ -2404,6 +2392,11 @@ msgid ""
 "href='http://www.samba.org/samba/docs/man/manpages-3/smb.conf.5.html' "
 "target='_blank'>manual page</a> for more details."
 msgstr "詳情請查看<a href='http://www.samba.org/samba/docs/man/manpages-3/smb.conf.5.html' target='_blank'>手冊頁</a>。"
+
+msgid ""
+"Please check the <a href='https://man.openbsd.org/sshd_config.5' "
+"target='_blank'>manual page</a> for more details."
+msgstr ""
 
 msgid "Please choose the method to wipe the device or 'Cancel' to abort."
 msgstr "請選擇抹除裝置的方式或選 '取消' 來中止。"
@@ -3504,9 +3497,15 @@ msgstr "此欄位應該只包含數字"
 msgid "This field should only contain numbers separated by <,> or <;>"
 msgstr "此欄位應該只包含以 <,> 或 <;> 分隔的數字"
 
+msgid "This field should only contain options separated by <,>"
+msgstr ""
+
 msgid ""
 "This field should only contain ports (0 - 65535) separated by <,> or <;>"
 msgstr "此欄位應該只包含以 <,> 或 <;> 分隔的通訊埠(0 - 65535)"
+
+msgid "This field should only contain strings separated by <,>"
+msgstr ""
 
 msgid "This field should only contain strings separated by <,> or <;>"
 msgstr "此欄位應該只包含以 <,> 或 <;> 分隔的字串"
